Connecting the sudoku activity to the other ones

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,10 @@
             android:name=".MysteryActivity"
             android:label="@string/title_activity_mystery" >
         </activity>
+        <activity
+            android:name=".SudokuMapActivity"
+            android:label="@string/title_activity_sudoku_map" >
+        </activity>
     </application>
 
 </manifest>
